[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
